templates/wikibase-ingress_template.yaml
---
# Source: wikibase-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-apps-ingress-main
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: "*.testing.localhost"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: platform-nginx
              port:
                number: 8080
